tests/compiler/jsxMismatchElementName/index.tsx
<Foo></Bar>
//~^ ERROR: Expected corresponding JSX closing tag for 'Foo'.